# NetworkExpertAgent

./: .gitignore  .vercelignore  LICENSE  README.md  agent_client.py  index.py  pyproject.toml  rag_utils.py  requirements.txt  rfc_optimizer.py  rfc_server.py  vercel.json
.codex/environments/: environment.toml
api/: chat.py  health.py  index.py
config/: settings.py
db/init/: supabase.sql
public/: app.css  app.js
scripts/: __init__.py  clear_rfc_db.py  preload_rfcs.py  seed_pgvector_from_chroma.py
src/: __init__.py  main.py
src/agents/: general_agent.py  rfc_agent.py
src/config/: settings.py
src/core/: answer_format.py  protocol_specs.json  rfc_catalog.py  router.py  state.py
src/skills/: skill.md
src/skills/rfc_agent/: SKILL.md  answering.md  base.md  intent.md  planning.md  retrieval.md
src/storage/: __init__.py  base.py  chroma_store.py  embeddings.py  factory.py  pgvector_store.py
src/tools/: rag_tools.py  rfc_tools.py
src/web/: __init__.py  app.py  server.py
tests/: benchmark.py  benchmark_metrics.py  quiz.md  test_agents.py  test_rag_tools.py  test_scripts.py  test_single_quiz.py  test_storage.py  test_web_app.py
