[project]
name = "NetworkExpertAgent"
version = "0.3.0"
description = "Network Expert Agent with RAG and progressive RFC skill runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "mcp",
    "httpx",
    "chromadb",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-huggingface",
    "sentence-transformers",
    "python-dotenv",
    "langgraph",
    "langsmith",
    "langchain-chroma>=1.1.0",
    "pgvector",
    "psycopg[binary]",
    "uvicorn",
]

[project.scripts]
app = "src.web.server:app"
network-expert = "src.main:main"
network-expert-web = "src.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
