[project]
name = "NetworkExpertAgent"
version = "0.2.0"
description = "Network Expert Agent with RAG and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "httpx",
    "chromadb",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "python-dotenv",
    "langgraph",
    "langsmith",
    "langchain-chroma>=1.1.0",
]

[project.scripts]
network-expert = "src.main:main"
network-expert-web = "src.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
