[project]
name = "NetworkExpertAgent"
version = "0.2.0"
description = "Network Expert Agent with RAG and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "langchain-openai",
    "langchain-text-splitters",
    "python-dotenv",
    "langgraph",
    "langsmith",
    "psycopg[binary]>=3.2.9",
    "pgvector>=0.3.6",
]

[project.scripts]
network-expert = "src.main:main"
network-expert-web = "src.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
